--- a/Module 4/book-examples/htmlElements.html
+++ b/Module 4/book-examples/htmlElements.html
@@ -83,7 +83,7 @@
                     In hac habitasse platea dictumst. Maecenas sollicitudin finibus nibh, sit amet pulvinar ante feugiat et. Nam eu sodales lectus. 
                     Morbi congue ante ac mauris posuere lacinia. Cras pharetra, metus in pulvinar suscipit, tellus libero pellentesque leo, vitae viverra velit ex laoreet quam. 
                     Pellentesque diam lorem, vehicula nec consequat in, aliquet et erat. <i>Pellentesque</i> imperdiet nunc ut risus lacinia facilisis. 
-                    Mauris justo quam, dictum vitae orci vitae, vehicula condimentum diam. <br>
+                    Mauris justo quam, jo<br>
                     
     <p id="paragraph5">This is paragraph 5 <br>
     <hr>
