--- a/Module 11/inttocss.html
+++ b/Module 11/inttocss.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <title>title</title>
 </head>
+<link rel="style-paragraph" href="style.css">
 <style>
     .slider-paragraph{
-       background-color: aquamarine;
-       padding: 20px; 
+       background-color: black;
+       padding: 50px; 
        color: antiquewhite;
-    }
+        border: 5px solid green;}
+    
     span{
        margin-top: 50px;
-       background-color: blue;
+       background-color: red;
        color: aliceblue;
     }
     .bg-img{background: url(https://st4.depositphotos.com/14431644/22076/i/450/depositphotos_220767694-stock-photo-handwriting-text-writing-example-concept.jpg);
@@ -20,12 +22,16 @@
    .border{border-width: 2px;
    border-style: solid;
    }
+   .border-solid{
+   border: 5px solid rebeccapurple;
+}
+
 </style>
-<link rel="style-paragraph" href="style.css">
+
 <body>
     <p>This is introduction to Css</p>
 
-<p class="slider-paragraph">test</p>
-<span>This is Css</span>
+<p class="slider-paragraph">Hello, Test</p>
+<span class="border-solid">This is Css design example</span>
 </body>
 </html>
