--- a/Module 13/M13.html
+++ b/Module 13/M13.html
@@ -32,8 +32,28 @@
       <td>Table 8</td>
       <td>Table 9</td>
     </tr>
-    
       </table>
+      
+      <div> 
+        <table>
+          <thead>
+          </tr>
+          <td>1</td>
+          <td>2</td>
+          <td>3</td>
+        </tr>
+          </thead>
+          <tr> 
+            <td>Table 1</td>
+            <td>Table 2</td>
+            <td>Table 3</td>
+            </tr>
+        </table>
+
+
+
+      </div>
+
 
 </body>
 </html>
