--- a/Module 15/Properties.html
+++ b/Module 15/Properties.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
+    <link rel="stylesheet" href="properties.css">
 </head>
 <body>
     <div class="static">This div is static</div>
@@ -10,6 +11,7 @@
     <div class="absolute">This div is absolute</div>
     <div class="sticky">This div is sticky</div>
     <div class="fixed">This div is fixed</div>
-  
+  <div class="outer">
+    <div class="inner">
 </body>
 </html>
