--- a/Module 15/Nav.html
+++ b/Module 15/Nav.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
 <head>
     <meta charset="UTF-8" />
@@ -8,10 +8,11 @@
 <body>
     <nav>
 <ul>
-<li>A</li>
-<li>B</li>
-<li>C</li>
-<li>D</li>    
+<li><a href="#home">Home</a></li>
+<li><a href="#news">News</a></li>
+<li><a href="#contact" class="active">Contact</a></li>
+<li><a href="#about_me">About Me</a></li>
+
 </ul>
     </nav>
     
