--- a/Module 18/animations.html
+++ b/Module 18/animations.html
@@ -23,13 +23,18 @@
         div.testAnimation{
             width: 50px;
             height: 50px;
-            animation: pulse;
+            animation: pulse 5s;
         }
+        @keyframes pulse {
+        }
+        .testAnimation{
+         animation-delay:5s ;
+          }
 
     </style>
 </head>
 <body>
-    <div class="Jon"></div>
+    <div class="testAnimation"></div>
     
 </body>
 </html>
