--- a/Projektifinal/contact.html
+++ b/Projektifinal/contact.html
@@ -163,8 +163,8 @@ footer {
         </div>
         <nav>
             <ul>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Products</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
