--- a/Projektifinal/index.html
+++ b/Projektifinal/index.html
@@ -143,8 +143,8 @@ header nav ul li a:hover {
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#products">Products</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
