--- a/Projektifinal/about.html
+++ b/Projektifinal/about.html
@@ -11,8 +11,8 @@
     box-sizing: border-box;
 }
 ::selection{
-    background-color: black;
-    color: white;
+    background-color: navy;
+    color: navajowhite;
 }
 body {
     font-family: Arial, sans-serif;
@@ -117,6 +117,15 @@ header nav ul li a {
 header nav ul li a:hover {
     color: #ffd700;
 }
+body {
+    font-family: Arial, sans-serif;
+    transition: background-color 0.5s ease;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+
+
 
 
 
@@ -132,6 +141,7 @@ header nav ul li a:hover {
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
+            
             </ul>
         </nav>
     </header>
@@ -171,5 +181,6 @@ header nav ul li a:hover {
             </div>
         </div>
     </section>
+  
 </body>
 </html>
