--- a/Projektifinal/about.html
+++ b/Projektifinal/about.html
@@ -16,8 +16,9 @@
 }
 body {
     font-family: Arial, sans-serif;
-   background-color: tomato;
+    background-color:  rgb(120, 226, 138);
     color: #333;
+ 
     line-height: 1.6;
 }
 
@@ -35,8 +36,9 @@ header {
 
 
 .about-us {
-    background-color: tomato;
+    background-color:  rgb(120, 226, 138);
     padding: 40px 20px;
+  
     text-align: center;
 }
 
@@ -109,13 +111,19 @@ header nav ul li {
 
 header nav ul li a {
     color: #121212;
+    position: relative;
     text-decoration: none;
     font-size: 1.1rem;
     text-transform: uppercase;
+    transition: all 0.3s ease-in-out;
 }
 
 header nav ul li a:hover {
     color: #ffd700;
+    background-color: orange;
+    border-radius: 10px;
+    padding: 0.5em 1em;
+
 }
 body {
     font-family: Arial, sans-serif;
@@ -141,6 +149,7 @@ body {
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             
             </ul>
         </nav>
