--- a/Projektifinal/login.html
+++ b/Projektifinal/login.html
@@ -159,6 +159,21 @@
             width: 100%;
             color: white;
         }
+        a:link, a:visited {
+  background-color: #6fcdf3;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  
+  text-decoration: none;
+  display: inline-block;
+ 
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
     </style>
 </head>
 <body>
@@ -178,12 +193,12 @@
             <form action="#" method="POST" class="contact-form">
                 <div class="form-group">
                     <label for="name">Username</label>
-                    <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+                    <input type="text" id="name" name="name" placeholder="Enter your username" required>
                 </div>
 
                 <div class="form-group">
                     <label for="email">Password</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    <input type="email" id="email" name="email" placeholder="Enter your password" required>
 
                 </div>
 
@@ -195,6 +210,7 @@
     </section>
     <footer>
         <p>If you are having problems logging in to your account make sure to leave us a message in the contact page.</p>
+       <div class="Con"> <ul><li><a href="contact.html">Contact</a></li></ul></div>
     </footer>
     
     
