--- a/Projektifinal/index.html
+++ b/Projektifinal/index.html
@@ -60,8 +60,9 @@
     }
     .hero {
         text-align: center;
-        padding: 100px 20px;
-        background-color: rgba(0, 0, 0, 0.7);
+        padding: 100px 80px;
+        
+     
     }
     .hero h2 {
         font-size: 3rem;
@@ -141,11 +142,12 @@
     </header>
     <section id="home">
         <div class="hero">
-            <h2>Home</h2>
+            <h2>Home Page</h2>
+            <p>ThIs Is Where We Showcase Our Products For You To Buy</p>
         </div>
     </section>
     <section id="products">
-        <h2>Random Products</h2>
+        <h2> Buy Our Products</h2>
         <div class="product-grid">
             <div class="product">
                 <img src="https://png.pngtree.com/png-vector/20231108/ourmid/pngtree-blank-white-pillow-generative-ai-png-image_10441762.png" alt="Product 1">
