--- a/Module 33/easy.html
+++ b/Module 33/easy.html
@@ -32,7 +32,7 @@
     const onlyLetters=/^[A-Za-z]+$/;
     
     if(!onlyLetters.text(name)){
-        errorMsg.textContent = "Please use letter only";
+        errorMsg.textContent = "Please use letters only";
     }else{
         errorMsg.textContent="";
         alert("Form submitted succsessfully!");
